--- a/ClientApp/client-app/src/app/components/menu-left/menu-left.component.html
+++ b/ClientApp/client-app/src/app/components/menu-left/menu-left.component.html
@@ -9,7 +9,7 @@
                 <nav class="mdl-navigation">
                     <div class="sub-navigation" *ngFor="let menu1 of menuData">
                         <div class="sub-navigation-item">
-                            <a class="mdl-navigation__link" (click)="menuClick($event)" [routerLink]="menu1.childs?.length > 0 ? menu1.link : ''">
+                            <a class="mdl-navigation__link" (click)="menuClick($event)" [routerLink]="menu1.childs?.length > 0 ? '' : menu1.link">
                                 <i class="material-icons">{{menu1.icon}}</i>
                                 {{menu1.name}}
                                 <i class="material-icons" *ngIf="menu1.childs?.length > 0">keyboard_arrow_down</i>
@@ -17,7 +17,7 @@
                             <div class="mdl-navigation">
                                 <div *ngIf="menu1.childs?.length > 0" class="sub-navigation">
                                     <div class="sub-navigation-item" *ngFor="let menu2 of menu1.childs">
-                                        <a class="mdl-navigation__link" (click)="menuClick($event)" [routerLink]="menu2.link">
+                                        <a class="mdl-navigation__link child" (click)="menuClick($event)" [routerLink]="menu2.link">
                                             {{menu2.name}}
                                             <i class="material-icons"
                                                 *ngIf="menu2.childs?.length > 0">keyboard_arrow_down</i>
