--- a/ClientApp/client-app/src/app/components/project/project.component.html
+++ b/ClientApp/client-app/src/app/components/project/project.component.html
@@ -1,1 +1,74 @@
-<p>project works!</p>
+
+<div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--4-col-phone">
+    <div class="mdl-card mdl-shadow--2dp line-chart">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">Quản lý người dùng</h2>
+        </div>
+        <div class="mdl-card__supporting-text w-100">
+            <div class="w-100">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable float-start">
+                    <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+                        <i class="material-icons">search</i>
+                    </label>
+    
+                    <div class="mdl-textfield__expandable-holder">
+                        <input class="mdl-textfield__input" type="text" id="search" (keyup.enter)="searchData()" [(ngModel)]="search.textSearch"/>
+                        <label class="mdl-textfield__label" for="search">Tìm kiếm...</label>
+                    </div>
+                </div>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect button--colored-light-blue float-end" (click)="openEditForm()">
+                    <i class="material-icons">add_circle</i>
+                    Thêm mới
+                </button>
+            </div>
+            <table class="mdl-data-table mdl-js-data-table bordered-table w-100">
+                <thead>
+                <tr>
+                    <th class="mdl-data-table__cell--non-numeric text-center">STT</th>
+                    <th class="mdl-data-table__cell--non-numeric">Tên dự án</th>
+                    <th class="mdl-data-table__cell--non-numeric">Ngày tạo</th>
+                    <th class="mdl-data-table__cell--non-numeric">Ghi chú</th>
+                    <th class="mdl-data-table__cell--non-numeric">Trạng thái hiện tại</th>
+                    <th class="mdl-data-table__cell--non-numeric w-50px">Thao tác</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let item of projects; let i = index">
+                    <td class="mdl-data-table__cell--non-numeric text-center">{{((search.pageIndex - 1) * search.pageSize) + i + 1}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{item.projectName}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{item.projectDate | date: "dd/mm/yyyy"}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{item.note}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{item.currentState}}</td>
+                    <td class="mdl-data-table__cell--non-numeric w-50px text-center">
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect button--colored-orange mr-20" (click)="openEditForm(item.projectId)">
+                            <i class="material-icons">create</i>
+                            Sửa
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect button--colored-red" (click)="openDeleteForm(item.projectId)">
+                            <i class="material-icons">delete</i>
+                            Xóa
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <p-paginator [rows]="search.pageSize" [totalRecords]="totalData" (onPageChange)="onPageChange($event)"></p-paginator>
+        </div>
+    </div>
+</div>
+
+
+<p-dialog [header]="projectId ? 'Chỉnh sửa dự án' : 'Thêm mới dự án'" [(visible)]="isShowModal" [modal]="true" [style]="{width: '70vw', 'z-index': '1000'}"
+    [draggable]="false" [resizable]="false">
+        <form (ngSubmit)="onSubmit()" [formGroup]="projectForm">
+            <div class="form-group">
+                <label class="col-lg-12">Tên dự án</label>
+                <div class="col-lg-12">
+                    <input type="text" pInputText formControlName="projectName" placeholder="Tên dự án..." class="w-100"/>
+                    <div class="error pl-0" *ngIf="(form.projectName.touched || isSubmit)">
+                        <p class="text-danger" *ngIf="form.projectName.errors?.required">Tên dự án không thể để trống</p>
+                    </div>
+                </div>
+            </div>
+        </form>
+</p-dialog>
