--- a/ClientApp/client-app/src/app/components/menu-left/menu-left.component.html
+++ b/ClientApp/client-app/src/app/components/menu-left/menu-left.component.html
@@ -1,6 +1,8 @@
 <div class="mdl-layout__drawer">
     <header>
-        <strong>darkboard</strong>
+        <!-- <div class="mt-1">
+            <span class="material-icons logo">work_outline</span>
+        </div> -->
         <button type="button" class="btn-menubar"><i class="fas fa-bars"></i></button>
     </header>
     <div class="scroll__wrapper" id="scroll__wrapper">
