--- a/ClientApp/client-app/src/app/components/project/project.component.html
+++ b/ClientApp/client-app/src/app/components/project/project.component.html
@@ -2,7 +2,7 @@
 <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--4-col-phone">
     <div class="mdl-card mdl-shadow--2dp line-chart">
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Quản lý người dùng</h2>
+            <h2 class="mdl-card__title-text">Quản lý dự án</h2>
         </div>
         <div class="mdl-card__supporting-text w-100">
             <div class="w-100">
